[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-cashmere"
version = "0.1.0"
description = "Python SDK for Carbon & Cashmere — node-backed crypto intelligence API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Carbon & Cashmere", email = "api@carbon-cashmere.de"}]
keywords = ["crypto", "bitcoin", "kaspa", "analytics", "x402", "api", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://api.carbon-cashmere.de"
Documentation = "https://api.carbon-cashmere.de/v1/endpoints"
Repository = "https://github.com/Nedeljko87/carbon-cashmere-python"
"Bug Tracker" = "https://github.com/Nedeljko87/carbon-cashmere-python/issues"

[tool.setuptools]
packages = ["carbon_cashmere"]
